Fixed overlapping images

--- a/css/mobile.style.scss
+++ b/css/mobile.style.scss
@@ -785,7 +785,7 @@ body {
 
 .s27 {
     user-select: none;
-	background-color: black;
+	background-color: white;
 	height: 1000px;
 	display: flex;
 	justify-content: center;
@@ -820,7 +820,8 @@ body {
 		height: 100%;
 		overflow: hidden;
 		transform-style: preserve-3d;
-		border-radius: 25px;
+		border-radius: 20px;
+		overflow: hidden;
 	}
 	
 	.atvImg-rendered-layer {
@@ -836,7 +837,7 @@ body {
 		transition: all 0.1s ease-out;
 		will-change: transform;
 	}
-	
+
 	.atvImg-shadow {
 		position: absolute;
 		top: 5%; 
@@ -855,7 +856,7 @@ body {
 		bottom: 0;
 		background: linear-gradient(135deg, rgba(255,255,255,.25) 0%,rgba(255,255,255,0) 60%);
 		will-change: background;
-		border-radius: 25px;
+		border-radius: 20px;
 	}
 }
 
